--- a/OrangeSpeedReader/res/layout/activity_main.xml
+++ b/OrangeSpeedReader/res/layout/activity_main.xml
@@ -8,4 +8,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    <GridView
+        android:id="@+id/gridViewMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:numColumns="2" 
+        android:columnWidth="90dp"
+        android:verticalSpacing="10dp"
+    	android:horizontalSpacing="10dp"
+	    android:stretchMode="columnWidth"
+	    android:gravity="center" >
+    
+    </GridView>
+
 </RelativeLayout>
