--- a/OrangeSpeedReader/res/layout/activity_word_player.xml
+++ b/OrangeSpeedReader/res/layout/activity_word_player.xml
@@ -27,16 +27,14 @@
          android:fitsSystemWindows.
     -->
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true" >
+   
+        
 
         <RelativeLayout
             android:id="@+id/fullscreen_content_controls"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
+            android:layout_height="match_parent"
+			android:fitsSystemWindows="true" >
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,10 +44,10 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/textViewPercentageBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="percentage"
+                    android:text="@string/percentage_bar"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <ProgressBar
@@ -59,17 +57,17 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/textViewWPM"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Words Per Minute"
+                    android:text="@string/words_per_minute"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <SeekBar
                     android:id="@+id/seekBar1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:contentDescription="position" />
+                     />
 
             </LinearLayout>
 
@@ -80,21 +78,21 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/textViewPages"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="words read / words left"
+                    android:text="@string/pages"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <SeekBar
                     android:id="@+id/seekBar2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dip"
                     android:layout_weight="1" />
 
             </LinearLayout>
         </RelativeLayout>
 
-    </FrameLayout>
+   
 
 </FrameLayout>
