--- a/OrangeSpeedReader/res/layout/activity_word_player.xml
+++ b/OrangeSpeedReader/res/layout/activity_word_player.xml
@@ -28,14 +28,12 @@
          android:fitsSystemWindows.
     -->
 
-   
-        
-
         <RelativeLayout
             android:id="@+id/fullscreen_content_controls"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-			android:fitsSystemWindows="true" >
+            android:fitsSystemWindows="true" >
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,12 +65,11 @@
                 <SeekBar
                     android:id="@+id/seekBar1"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                     />
-
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/linearLayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -90,11 +87,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:layout_weight="1" />
-
             </LinearLayout>
         </RelativeLayout>
-
-   
-
 
 </FrameLayout>
