add working position slider, and on screen information update
The bottom slider now moves to the position in the book where it lands.
The numbers above it move based on the word count, and an ETA is
calculated based on (total words - words read)/Words per minute = minutes
left. The Both sliders update the ETA value when they move so if one
increases the WPM the ETA on  the bottom slider goes down. The word
counter on the bottom also has a percentage to 2 decimal places. The WPM
is loaded onCreate and saved on stop.

--- a/OrangeSpeedReader/res/layout/activity_word_player.xml
+++ b/OrangeSpeedReader/res/layout/activity_word_player.xml
@@ -18,7 +18,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="Words"
         android:textColor="#33b5e5"
         android:textSize="50sp"
         android:textStyle="bold" />
@@ -63,7 +62,7 @@
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <SeekBar
-                    android:id="@+id/wpsBar"
+                    android:id="@+id/wpmBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:max="1500"
