--- a/OrangeSpeedReader/res/layout/activity_word_player.xml
+++ b/OrangeSpeedReader/res/layout/activity_word_player.xml
@@ -41,7 +41,8 @@
                 android:layout_alignParentTop="true"
                 android:minHeight="45dip"
                 android:orientation="vertical"
-                android:paddingTop="20dp" >
+                android:paddingBottom="10dp"
+                android:paddingTop="30dp" >
 
                 <TextView
                     android:id="@+id/textViewWPM"
