--- a/OrangeSpeedReader/res/menu/main.xml
+++ b/OrangeSpeedReader/res/menu/main.xml
@@ -1,9 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<?xml version="1.0" encoding="utf-8"?>
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item 	android:id="@+id/action_settings"
+			android:orderInCategory="100"
+        	android:showAsAction="never"
+         	android:icon="@android:drawable/ic_menu_preferences"        
+        	android:title="@string/action_settings"/>
+
+   <item 	android:id="@+id/help"
+          	android:icon="@android:drawable/ic_menu_help"
+          	android:title="@string/help"/>
+
+   
 </menu>
