--- a/OrangeSpeedReader/res/values/strings_activity_settings.xml
+++ b/OrangeSpeedReader/res/values/strings_activity_settings.xml
@@ -33,35 +33,46 @@
 	<string name="pref_title_night_osd_color">On Screen Display Color (Nighttime)</string>
     <string name="pref_description_night_osd_color">Color of the slider and overlay text in night mode</string>
     
-    
-    
     <string name="pref_title_font">Font</string>
     <string name="pref_description_font">The Font for the Word Player</string>
     <string-array name="pref_font_list">
-        <item>Droid Sans</item>
-        <item>Droid Serif</item>
-        <item>Droid Sans Mono</item>
+        <item>roboto_thin</item>
+        <item>roboto_thin_italic</item>
+        <item>roboto_light</item>
+        <item>roboto_light_italic</item>
+        <item>roboto_regular</item>
+        <item>roboto_italic</item>
+        <item>roboto_medium</item>
+        <item>roboto_medium_italic</item>
+        <item>roboto_bold</item>
+        <item>roboto_bold_italic</item>
+        <item>roboto_black</item>
+        <item>roboto_black_italic</item>
+        <item>roboto_condensed</item>
+        <item>roboto_condensed_italic</item>
+        <item>roboto_condensed_bold</item>
+        <item>roboto_condensed_bold_italic</item>
     </string-array>
     <string-array name="pref_font_list_values">
-        <item>SANS_SERIF</item>
-        <item>SERIF</item>
-        <item>MONOSPACE</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>14</item>
     </string-array>    
     
-    <string name="pref_title_font_style">Font Style</string>
-    <string name="pref_description_font_style">Bold and Italic</string>
-    <string-array name="pref_font_style_list">
-        <item>Normal</item>
-        <item>Bold</item>
-        <item>Italic</item>
-        <item>Bold and Italic</item>
-    </string-array>
-    <string-array name="pref_font_style_list_values">
-        <item>NORMAL</item>
-        <item>BOLD</item>
-        <item>ITALIC</item>
-        <item>BOLD_ITALIC</item>
-	</string-array>       
+    
     
     
     <string name="pref_title_font_size">Font Size</string>
@@ -69,21 +80,41 @@
     <string-array name="pref_font_size_list">
         <item>Micro</item>
         <item>Small</item>
+        
         <item>Medium</item>
         <item>Large</item>
+        
         <item>Extra Large</item>
         <item>XXL</item>
+        
         <item>Huge</item>
+        <item>Ridiculous</item>
+        
+        <item>Ludicrous</item>
+        <item>Super</item>
+        
+        <item>Uber</item>
+        
 	</string-array>
     
     <string-array name="pref_font_size_list_values">
-        <item>12sp</item>
-        <item>14sp</item>
-        <item>18sp</item>
-        <item>22sp</item>
-        <item>50sp</item>
-        <item>65sp</item>
-        <item>75sp</item>
+        <item>10</item>
+        <item>20</item>
+
+        <item>30</item>
+        <item>40</item>
+        
+        <item>50</item>
+        <item>60</item>
+        
+        <item>70</item>
+        <item>80</item>
+        
+        <item>90</item>
+        <item>100</item>
+        
+        <item>110</item>
+        
 	</string-array>       
     
     <string name="pref_title_text_alignment">Text Alignment</string>
@@ -102,17 +133,17 @@
         <item>Bottom Right</item>
  </string-array>
     <string-array name="pref_text_alignment_list_values">
-        <item>top|left</item>
-        <item>top|center</item>
-        <item>top|right</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
  
-        <item>center|left</item>
-        <item>center</item>
-        <item>center|right</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
  
-        <item>bottom|left</item>
-        <item>bottom|center</item>
-        <item>bottom|right</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
  	</string-array>       
     
     
@@ -123,24 +154,30 @@
     <!-- player settings     -->
     <string name="pref_header_player">Player</string>
     
-    <string name="pref_title_words">Words at a time</string>
-    <string name="pref_description_words">The number of words flashed on the screen at a time.</string>
+    <string name="pref_title_chunk_size">Words at a time</string>
+    <string name="pref_description_chunk_size">The number of words flashed on the screen at a time.</string>
     
     <string name="pref_title_default_wpm">Default Words Per Minute</string>
     <string name="pref_description_default_wpm">The speed of the word player when opening a new book</string>
     
     <string name="pref_title_variable_speed">Variable Speed Words</string>
-    <string name="pref_description_variable_speed">Slow down the player on puncuation, on when checked.</string>
+    <string name="pref_description_variable_speed">Reduce speed when long words appear, on when checked.</string>
     
-    <string name="pref_title_slow_down">Slow down on large words</string>
-    <string name="pref_description_slow_down">Reduce speed when long words appear, on when checked.</string>
+    <string name="pref_title_slow_down">Slow down on puncuation.</string>
+    <string name="pref_description_slow_down">Slow down the player on puncuation, on when checked.</string>
     
+    <string name="pref_title_random_speed">Random Speed</string>
+    <string name="pref_description_random_speed">Slow down or speed up words randomly.</string>
+        
     <string name="pref_title_new_chunk_at_end">New Chuck start at beginning of sentence.</string>
     <string name="pref_description_new_chunk_at_end">Don\'t leave a period in the middle of a chunk of words on when checked.</string>
     
     <string name="pref_title_skip_stopwords">Skip over stopwords</string>
     <string name="pref_description_skip_stopwords">Don\'t bother displaying the words the, is, at, which, on. This setting is on when checked.</string>
 
+    <string name="pref_title_skip_vowels">Skip over vowels</string>
+    <string name="pref_description_skip_vowels">Remove a,e,i,o,u from words that are larger the 4 characters; on when checked.</string>
+    
     
     
     
